# Coldstart

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Coldstart.py  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py  test_Coldstart.py
Coldstart_sheikhisaac.egg-info/: PKG-INFO  SOURCES.txt
scripts/: Coldstart.py  create_environment.py  create_project_folder.py  create_readme.py  exit_test.py  language_determination.py  license_determination.py  licenses.py  logo.py  python_gitignore.py  python_setup.py  test_Coldstart1.py  validate_responses.py
src/: Coldstart.py  create_environment.py  create_readme.py  language_determination.py  license_determination.py  licenses.py  python_setup.py  repo_creation.py
